[package]
name = "gifff"
version = "1.1.0"
authors = ["Michael Enger <michaelenger@live.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2.33"
dirs = "2.0"
rand = "0.7"
reqwest = "0.9"
serde = { version = "1.0", features = ["derive"] }
