[package]
name = "gifff"
version = "1.2.2"
authors = ["Michael Enger <michaelenger@live.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gumdrop = "0.8"
dirs = "4.0"
rand = "0.8"
reqwest = { version = "0.11", features = ["blocking", "json"] }
serde = { version = "1.0", features = ["derive"] }
